unpackaged/main/default/objects/Opportunity/fields/Plan_Changes__c.field-meta.xml
<CustomField>
    <fullName>Plan_Changes__c</fullName>
    <description>Plan Changes, yes or no</description>
    <label>Plan Changes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>