unpackaged/main/default/objects/Opportunity/fields/Plan_Description__c.field-meta.xml
<CustomField>
    <fullName>Plan_Description__c</fullName>
    <label>Plan Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>