unpackaged/main/default/objects/Opportunity/fields/Plan_Design__c.field-meta.xml
<CustomField>
    <fullName>Plan_Design__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plan Design</label>
    <referenceTo>PurchaserPlan</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>