unpackaged/main/default/objects/Opportunity/fields/Plan_Level__c.field-meta.xml
<CustomField>
    <fullName>Plan_Level__c</fullName>
    <description>Plan Level picklist</description>
    <label>Plan Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bronze</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>