unpackaged/main/default/objects/Opportunity/fields/PPO_Required__c.field-meta.xml
<CustomField>
    <fullName>PPO_Required__c</fullName>
    <description>For Quote Request</description>
    <label>PPO Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>