unpackaged/main/default/objects/Opportunity/fields/Preliminary_Rates__c.field-meta.xml
<CustomField>
    <fullName>Preliminary_Rates__c</fullName>
    <description>For Quote Request</description>
    <label>Preliminary Rates</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Excel Census</fullName>
            </value>
            <value>
                <fullName>Current Benefits</fullName>
            </value>
            <value>
                <fullName>Current Rates</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>