unpackaged/main/default/objects/Opportunity/fields/Primary__c.field-meta.xml
<CustomField>
    <fullName>Primary__c</fullName>
    <description>Used to mark an opportunity as primary, only needed for New Group oppurtunities</description>
    <label>Primary</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>