unpackaged/main/default/objects/Opportunity/fields/Reason_Declined_to_Quote__c.field-meta.xml
<CustomField>
    <fullName>Reason_Declined_to_Quote__c</fullName>
    <description>used for Small Groups</description>
    <label>Reason Declined to Quote</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Base Rates &gt; Renewal</fullName>
            </value>
            <value>
                <fullName>Competitive Base/CURV &lt;5% Savings</fullName>
            </value>
            <value>
                <fullName>CURV - Insufficient Data</fullName>
            </value>
            <value>
                <fullName>CURV Score &gt; Renewal</fullName>
            </value>
            <value>
                <fullName>Field U/W</fullName>
            </value>
            <value>
                <fullName>Insufficient Premium Savings</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>PPO Risk Exposure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>