unpackaged/main/default/objects/Opportunity/fields/Renewability_and_Rating_Notice__c.field-meta.xml
<CustomField>
    <fullName>Renewability_and_Rating_Notice__c</fullName>
    <description>Renewability and Rating Notice, yes or no</description>
    <label>Renewability and Rating Notice</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>