unpackaged/main/default/objects/Opportunity/fields/Requesting_Change_to_Commissions__c.field-meta.xml
<CustomField>
    <fullName>Requesting_Change_to_Commissions__c</fullName>
    <description>For Renewal Request</description>
    <label>Requesting Change to Commissions?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>