unpackaged/main/default/objects/Opportunity/fields/Requesting_Rate_Cap__c.field-meta.xml
<CustomField>
    <fullName>Requesting_Rate_Cap__c</fullName>
    <description>For Quote Request and Renewal Request and Market insights section</description>
    <label>Requesting Rate Cap?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>