unpackaged/main/default/objects/Opportunity/fields/Retiree_Policy__c.field-meta.xml
<CustomField>
    <fullName>Retiree_Policy__c</fullName>
    <description>For Quote Request</description>
    <label>Retiree Policy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>