unpackaged/main/default/objects/Opportunity/fields/Retro_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Retro_Agreement__c</fullName>
    <description>for groups only</description>
    <label>Retro Agreement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>