unpackaged/main/default/objects/Opportunity/fields/Riders__c.field-meta.xml
<CustomField>
    <fullName>Riders__c</fullName>
    <description>For Quote Request and Renewal Request</description>
    <label>Riders</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PCP</fullName>
            </value>
            <value>
                <fullName>Artificial Insemination</fullName>
            </value>
            <value>
                <fullName>Out of Area Dependent</fullName>
            </value>
            <value>
                <fullName>$0 OV Copay for Children to Age 26</fullName>
            </value>
            <value>
                <fullName>Domestic Partner</fullName>
            </value>
            <value>
                <fullName>Virtual First</fullName>
            </value>
            <value>
                <fullName>Waiver of Premium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>