unpackaged/main/default/objects/Opportunity/fields/RXDC_Survey_Received__c.field-meta.xml
<CustomField>
    <fullName>RXDC_Survey_Received__c</fullName>
    <description>RXDC Survey Received, yes or no</description>
    <label>RXDC Survey Received?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>