unpackaged/main/default/objects/Opportunity/fields/Single_Case_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Single_Case_Agreement__c</fullName>
    <description>Single Case Agreement, yes or no</description>
    <label>Single Case Agreement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>