unpackaged/main/default/objects/Opportunity/fields/Tier_Structure__c.field-meta.xml
<CustomField>
    <fullName>Tier_Structure__c</fullName>
    <description>For Quote Request</description>
    <label>Tier Structure</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2-Tier</fullName>
            </value>
            <value>
                <fullName>3-Tier</fullName>
            </value>
            <value>
                <fullName>4-Tier</fullName>
            </value>
            <value>
                <fullName>5-Tier</fullName>
            </value>
            <value>
                <fullName>Limited Family</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>