unpackaged/main/default/objects/Opportunity/fields/Underwriting_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Underwriting_Approval_Status__c</fullName>
    <description>Underwriting Approval Status</description>
    <label>Underwriting Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sent for Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>