unpackaged/main/default/objects/Opportunity/fields/Underwriting_Status__c.field-meta.xml
<CustomField>
    <fullName>Underwriting_Status__c</fullName>
    <description>For Underwriting Team Checklist</description>
    <label>Underwriting Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Request Submitted</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Peer Review/Rate Approvals In Progress</fullName>
            </value>
            <value>
                <fullName>Proposal Sent to Sales</fullName>
            </value>
            <value>
                <fullName>Revisions In Progress</fullName>
            </value>
            <value>
                <fullName>Revisions Sent to Sales</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>