unpackaged/main/default/objects/Opportunity/fields/UW_Complexity__c.field-meta.xml
<CustomField>
    <fullName>UW_Complexity__c</fullName>
    <description>For Underwriting Team Checklist</description>
    <label>UW Complexity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>