unpackaged/main/default/objects/Opportunity/recordTypes/Group.recordType-meta.xml
<RecordType>
    <fullName>Group</fullName>
    <active>true</active>
    <businessProcess>Standard Process</businessProcess>
    <label>Group</label>
</RecordType>