unpackaged/main/default/objects/Opportunity/recordTypes/Individual.recordType-meta.xml
<RecordType>
    <fullName>Individual</fullName>
    <active>true</active>
    <businessProcess>Standard Process</businessProcess>
    <label>Individual</label>
</RecordType>