unpackaged/main/default/objects/Opportunity/validationRules/New_Opportunities_for_ACA_Individual.validationRule-meta.xml
<ValidationRule>
    <fullName>New_Opportunities_for_ACA_Individual</fullName>
    <active>true</active>
    <description>Validation Rule will only allow New Opportunities for ACA Individual</description>
    <errorConditionFormula>AND(ISPICKVAL(Type,&#39;Renewal&#39;),
ISPICKVAL(LOB__c,&#39;Individual&#39;),
$Profile.Name=&#39;Quartz Individual&#39;,
RecordType.Name=&#39;Individual&#39;)</errorConditionFormula>
    <errorMessage>You cannot manually create renewal opportunities for individual ACA. Please contact Customer Success.</errorMessage>
</ValidationRule>